@@ -234,7 +234,7 @@
           </packing>
         </child>
         <child>
-          <widget class="GtkVBox" id="message_area_vbox">
+          <widget class="GtkEventBox" id="message_area_eventbox">
             <property name="visible">True</property>
             <child>
               <placeholder/>
