@@ -1,3 +1,10 @@
+2008-05-14  Ross Burton  <ross@burtonini.com>
+
+	* data/sound-juicer.glade:
+	* src/sj-main.c:
+	Fix display problems with the notification by putting it inside an
+	event box (#512231, thanks Pekka Vuorela)
+
 2008-04-17  Luca Cavalli  <lcavalli@svn.gnome.org>
 
 	* src/Makefile.am:
